[project]
name = "my_tools"
version = "0.1.0"
description = "Custom Python utilities with math, text, and helper functions."
authors = [
    {name = "Student", email = "student@example.com"}
]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
